syntax = "proto3";
package msg;
option go_package = "vg_proj/proto/msg";

////////////////////////////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////////////-----嵌套数据-----////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////

// 同步类型数量
message NUM{
    int32 num_type = 1; // 数量类型: 查看[推送数量类型定义.txt]
    int64 num=2; // 当前数量
    int64 data1=3; // 附加数据,当类型为体力时为下次体力恢复倒计时(秒)
}

// 属性
message PRO{
    int32 pro_type=1; // 属性类型
    int32 pro_value=2; // 属性值
}

// 物品数量
message ITEM_NUM{
    int32 id=1; // 物品Id
    int64 num=2; // 物品数量
}

// 角色基础信息
message ROLE_BASE_INFO{
    int32 rid=1; // 好友角色Id
    string name=2; // 好友名称
    int32 serv_id=3; // 服务器Id
    int32 head=4; // 头像
    int32 head_frame=5; // 头像框
    int32 role_lv=6; // 好友等级
    int32 ce=7; // 好友战力
    int32 vip_lv=8; // Vip等级
    int32 guild=9; // 好友公会Id
    string guild_name=10; // 好友公会名称
    int32 pvp_rank=11; // 竞技场排名
    int64 last_exit_ts=12; // 上次退出时间戳
}

// 多语言参数
message CHARACTERS_PARAM{
    int32 param_type=1; // 参数类型
    string param_value=2; // 参数值
}

message S2C_NOTIFY_UPDATE {
    
}
